[gd_scene load_steps=21 format=3 uid="uid://f22au7be1on2"]

[ext_resource type="Script" uid="uid://f4qga21ey647" path="res://Player/player.gd" id="1_l8h54"]
[ext_resource type="Script" uid="uid://6obxm53fjk5r" path="res://Player/smooth_camera.gd" id="2_4ntmi"]
[ext_resource type="Script" uid="uid://4l03pjcqqt3y" path="res://Player/interaction_ray_cast.gd" id="3_apopc"]
[ext_resource type="Script" uid="uid://iqw5yv0t6fi" path="res://Player/weapon_handler.gd" id="3_od3ui"]
[ext_resource type="PackedScene" uid="uid://cg21gi7aems0j" path="res://Weapons/club.tscn" id="4_00tjw"]
[ext_resource type="Script" uid="uid://ocrdiea6xgou" path="res://Levels/crosshair.gd" id="4_gwnis"]
[ext_resource type="Texture2D" uid="uid://cmtmfwb6m25d0" path="res://Player/damage.png" id="5_k53q1"]
[ext_resource type="PackedScene" uid="uid://nyqcy273ngn" path="res://Weapons/olive_projectile_weapon.tscn" id="5_x3vf3"]
[ext_resource type="Script" uid="uid://6yv0u7ame6lq" path="res://Player/ammo_handler.gd" id="6_00tjw"]
[ext_resource type="PackedScene" uid="uid://dkuxinwnlda42" path="res://Player/game_over_menu.tscn" id="6_fhl08"]
[ext_resource type="FontFile" uid="uid://dusmamaheo07n" path="res://Assets/Jacquard24-Regular.ttf" id="9_x3vf3"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_l3kh5"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_d3736"]

[sub_resource type="LabelSettings" id="LabelSettings_5htga"]
font_size = 32
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_fhl08"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DamageTexture:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DamageTexture:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_k53q1"]
resource_name = "TakeDamage"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DamageTexture:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DamageTexture:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fhl08"]
_data = {
&"RESET": SubResource("Animation_fhl08"),
&"TakeDamage": SubResource("Animation_k53q1")
}

[sub_resource type="LabelSettings" id="LabelSettings_apopc"]
font = ExtResource("9_x3vf3")
font_size = 96

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_apopc"]
bg_color = Color(0.13, 0.13, 0.13, 0.54902)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x3vf3"]
bg_color = Color(0.69, 0, 0, 1)

[node name="Player" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_l8h54")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_l3kh5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_d3736")

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)

[node name="SmoothCamera" type="Camera3D" parent="CameraPivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)
top_level = true
cull_mask = 1048573
script = ExtResource("2_4ntmi")

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="CameraPivot/SmoothCamera"]
remote_path = NodePath("../../../SubViewportContainer/SubViewport/WeaponCamera")

[node name="InteractionRayCast" type="RayCast3D" parent="CameraPivot/SmoothCamera"]
target_position = Vector3(0, 0, -5)
script = ExtResource("3_apopc")

[node name="MarginContainer" type="MarginContainer" parent="CameraPivot/SmoothCamera/InteractionRayCast"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme_override_constants/margin_bottom = 150

[node name="PromptLabel" type="Label" parent="CameraPivot/SmoothCamera/InteractionRayCast/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "You Found An Item"
label_settings = SubResource("LabelSettings_5htga")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="WeaponCamera" type="Camera3D" parent="SubViewportContainer/SubViewport"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)
cull_mask = 2
fov = 45.0

[node name="WeaponHandler" type="Node3D" parent="SubViewportContainer/SubViewport/WeaponCamera" node_paths=PackedStringArray("weapon_1")]
unique_name_in_owner = true
script = ExtResource("3_od3ui")
weapon_1 = NodePath("Club")

[node name="Club" parent="SubViewportContainer/SubViewport/WeaponCamera/WeaponHandler" node_paths=PackedStringArray("ammo_handler") instance=ExtResource("4_00tjw")]
ammo_handler = NodePath("../../AmmoHandler")

[node name="OliveProjectileWeapon" parent="SubViewportContainer/SubViewport/WeaponCamera/WeaponHandler" node_paths=PackedStringArray("ammo_handler") instance=ExtResource("5_x3vf3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.24081)
projectile_speed = 8.0
ammo_handler = NodePath("../../AmmoHandler")

[node name="AmmoHandler" type="Node" parent="SubViewportContainer/SubViewport/WeaponCamera" node_paths=PackedStringArray("ammo_label", "weapon_handler")]
unique_name_in_owner = true
script = ExtResource("6_00tjw")
ammo_label = NodePath("../../../../MarginContainer/AmmoLabel")
weapon_handler = NodePath("../WeaponHandler")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Crosshair" type="Control" parent="CenterContainer"]
layout_mode = 2
script = ExtResource("4_gwnis")

[node name="DamageTexture" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(576, 324)
mouse_filter = 2
texture = ExtResource("5_k53q1")

[node name="DamageAnimationPlayer" type="AnimationPlayer" parent="DamageTexture"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_fhl08")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 20

[node name="AmmoLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "999"
label_settings = SubResource("LabelSettings_apopc")

[node name="HealthProgressBar" type="ProgressBar" parent="MarginContainer"]
custom_minimum_size = Vector2(200, 25)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_styles/background = SubResource("StyleBoxFlat_apopc")
theme_override_styles/fill = SubResource("StyleBoxFlat_x3vf3")
step = 1.0
value = 50.0
show_percentage = false

[node name="GameOverMenu" parent="." instance=ExtResource("6_fhl08")]
process_mode = 3
visible = false
